--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
 </head>
 
 <body>
+  <div class="lang-switch">
+    <button id="langPT">PT</button>
+    <button id="langEN">EN</button>
+  </div>
   <main>
-    <h1 class="offscreen">My List</h1>
+    <h1 class="offscreen" data-i18n="title">My List</h1>
 
     <section class="newItemEntry">
-      <h2 class="offscreen">New Item Entry</h2>
+      <h2 class="offscreen" data-i18n="newItemTitle">New Item Entry</h2>
       <form class="newItemEntry__form" id="itemEntryForm">
-        <label for="newItem" class="offscreen">Enter a new to do item</label>
+        <label for="newItem" class="offscreen" data-i18n="label">
+          Enter a new to do item
+        </label>
         <input class="newItemEntry__input" id="newItem" type="text" maxlength="40" autocomplete="off"
-          placeholder="Add item" />
-        <button id="addItem" class="button newItemEntry__button" title="Add new item" aria-label="Add new item to list">
+          data-i18n-placeholder="placeholder" placeholder="Add item" />
+        <button id="addItem" class="button newItemEntry__button" title="Add new item" aria-label="Add new item to list"
+          data-i18n="add">
           +
         </button>
       </form>
@@ -28,29 +35,13 @@
 
     <section class="listContainer">
       <header class="listTitle">
-        <h2 id="listName">List</h2>
-        <button id="clearItemsButton" class="button listTitle__button" title="Clear the list"
-          aria-label="Remove all items from the list">
-          Clear
+        <h2 id="listName" data-i18n="title">List</h2>
+        <button id="clearItemsButton" class="button listTitle__button" data-i18n="clear">
+          Clear All
         </button>
       </header>
       <hr />
       <ul id="listItems">
-        <!-- <li class="item">
-                    <input type="checkbox" id="1">
-                    <label for="1">eat</label>
-                    <button class="button">X</button>
-                </li>
-                <li class="item">
-                    <input type="checkbox" id="2">
-                    <label for="2">sleep</label>
-                    <button class="button">X</button>
-                </li>
-                <li class="item">
-                    <input type="checkbox" id="3">
-                    <label for="3">code</label>
-                    <button class="button">X</button>
-                </li> -->
       </ul>
     </section>
   </main>
