--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My List</title>
+  <title>To Do List</title>
   <link rel="stylesheet" href="/src/css/style.css">
+  <link rel="icon" type="image/svg" href="/todolist.svg" />
   <script type="module" src="/src/main.ts" defer></script>
 </head>
 
